fix: filters were cutting off

--- a/src/styles.css
+++ b/src/styles.css
@@ -505,7 +505,7 @@ a:hover{
   margin-top:70px;
 }
 .results-and-filters{
-  padding-top: 130px;
+  padding-top: 175px;
 }
 .header-section-40{
   margin:0 auto;
